# crystal-book

./: .bookignore  .envrc  .gitignore  .markdownlint.yaml  .markdownlintrc  .travis.yml  .travis_build.sh  Crystal-for-Rubyists.md  Crystal_update  Dockerfile  Gemfile  Makefile  README.md  SUMMARY.md  _config.yml  _typos.toml  book.json  crystal-version.txt  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  hooks.py  introduction.md  mkdocs.yml  netlify.toml  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.in  requirements.txt
.github/: renovate.json
conventions/: README.md  coding_style.md  documenting_code.md  writing_shards.md
database/: README.md  connection.md  transactions.md
docs/: GOVERNANCE.md  README.md  SUMMARY.md  governance.md  platform_support.md
en/: README.md
getting_started/: README.md  cli.md  http_server.md
guides/: README.md  collections.md  concurrency.md  continuous_integration.md  performance.md  shipping.md  testing.md  writing_shards.md
installation/: README.md  from_a_targz.md  from_source_repository.md  from_targz.md  on_alpine_linux.md  on_arch_linux.md  on_bash_on_ubuntu_on_windows.md  on_debian_and_ubuntu.md  on_freebsd.md  on_gentoo_linux.md  on_linux_using_linuxbrew.md  on_linux_using_snap.md  on_mac_osx_using_homebrew.md  on_opensuse.html  on_opensuse.md  on_redhat_and_centos.md
overrides/: main.html
overview/: README.md  cli.md  hello_world.md  http_server.md
scripts/: aws-config.json  docs-versions.sh  format-code-block.cr  release-update.sh  transform-to-jekyll.cr  validate-flags.sh
(+456 files in other folders)
