[tool.poetry]
name = "crystal-book"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
babel = "^2.14.0"
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
colorama = "^0.4.6"
ghp-import = "^2.1.0"
idna = "^3.7"
jinja2 = "^3.1.3"
markdown = "^3.6"
markdown-callouts = "^0.4.0"
markupsafe = "^2.1.5"
mergedeep = "^1.3.4"
mkdocs = "^1.6.0"
mkdocs-code-validator = "^0.2.0"
mkdocs-get-deps = "^0.2.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-material = "^9.5.20"
mkdocs-material-extensions = "^1.3.1"
mkdocs-redirects = "^1.2.1"
mkdocs-section-index = "^0.3.9"
packaging = "^24.0"
paginate = "^0.5.6"
pathspec = "^0.12.1"
platformdirs = "^4.2.1"
pygments = "^2.17.2"
pymdown-extensions = "^10.8.1"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.1"
pyyaml-env-tag = "^0.1"
regex = "^2024.4.28"
requests = "^2.31.0"
six = "^1.16.0"
urllib3 = "^2.2.1"
watchdog = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
